--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
  body {
     font-family: Raleway !important;
-    background-image: url('image-landing.jpg');
+    background-image: url('image-landing-2.jpg');
     background-position: center !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
