--- a/style.css
+++ b/style.css
@@ -16,14 +16,15 @@
     padding-left: 50px !important;
 }
 
-@media only screen and (max-width: 600px){
-    #Home{
-        background-image: url('image-mobile.jpg');
-        background-position: center !important;
-        background-repeat: no-repeat !important;
-        background-size: 90% !important;
-        background-attachment: fixed !important;
-    }
+@media only screen and (max-width: 600px) {
+   body {
+       font-family: Raleway !important;
+       background-image: url('image-mobile.jpg');
+       background-position: center !important;
+       background-repeat: no-repeat !important;
+       background-size: cover !important;
+
+   }
 }
 
 @media only screen and (max-width: 600px) {
