--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 
  body {
     font-family: Raleway !important;
-    background-image: url('image-landing-2.jpg');
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    
+   
 }
+#About-Me{
+   margin-top: 8% !important;
+}
+#Home{
+ background-image: url('image-landing-2.jpg');
+ background-position: center !important;
+ background-repeat: no-repeat !important;
+ background-size: cover !important;
+ padding-bottom: 100px !important; 
+ }
+
+ #Recent-Works{
+    
+     padding: 10px !important;
+ }
 .landing-text{
     margin-top: 30% !important;
 }
@@ -14,27 +25,6 @@
     color: white !important;
     font-size: 18px !important;
     padding-left: 50px !important;
-}
-
-@media only screen and (max-width: 600px) {
-   body {
-       font-family: Raleway !important;
-       background-image: url('image-mobile.jpg');
-       background-position: center !important;
-       background-repeat: no-repeat !important;
-       background-size: cover !important;
-
-   }
-}
-
-@media only screen and (max-width: 600px) {
-    #Heading-Landing {
-        font-family: Raleway !important;
-        font-size: 50px !important;
-        font-weight: 900 !important;
-        color: black;
-        margin-top: 50% !important;
-    }
 }
 
 #Heading-Landing{
@@ -60,3 +50,92 @@
     font-weight: 700 !important;
 }
 
+#Heading-Recent-Works{
+    font-family: Raleway !important;
+    font-size: 50px !important;
+    font-weight: 900 !important;
+    color: black;
+    margin-top: 15% !important;
+}
+.projects{
+    margin-top: 10% !important;
+}
+.project-name{
+    font-weight: 800 !important;
+    font-size: 25px !important;
+    text-align: center !important;
+}
+.Heading-About-Me{
+    text-align: center !important;
+    font-size: 20px !important;
+    color: #878a8f !important;
+}
+.Biography{
+    text-align: center !important;
+    font-weight: 900 !important;
+    font-size: 2.5rem !important;
+}
+
+.Work-Experience{
+    text-align: center !important;
+    font-size: 1.375rem !important;
+    color: #878a8f !important;
+}
+.Image-About-Me{
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 50%;
+}
+.Services{
+    text-align: center !important;
+    font-weight: 800 !important;
+    font-size: 1.375rem !important;
+}
+.Heading-Service{
+    text-align: center !important;
+    color: #878a8f !important;
+    font-size: 1.375rem !important;
+    margin-top: 5% !important;
+}
+#Heading-Contact-Me{
+ font-family: Raleway !important;
+ font-size: 50px !important;
+ font-weight: 900 !important;
+ color: black;
+ margin-top: 10% !important;
+ text-align: center !important;
+}
+#Paragraph-Contact-Me{
+     text-align: center !important;
+     font-size: 1.375rem !important;
+     color: #878a8f !important;
+}
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+    border-color: black;
+    box-shadow: 0 3px 3px black;
+    outline: 0 none;
+}
+
+.form-control:focus {
+    color: #eaedf2;
+    background-color: #fff;
+    border-color:black !important;
+    outline: 0;
+    box-shadow: 0 3px 3px black !important;
+}
